force-app/main/default/objects/ServiceAndDamageCost__c/ServiceAndDamageCost__c.object-meta.xml
<CustomObject>
    <description>approximately costs for service, tyres and damage used in holding cost calculation</description>
    <label>Service and Damage Cost</label>
    <nameField>
        <displayFormat>SDC-{00000}</displayFormat>
        <label>Service and Damage Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service and Damage Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>