force-app/main/default/objects/ServiceAndDamageCost__c/fields/Car_Groups__c.field-meta.xml
<CustomField>
    <fullName>Car_Groups__c</fullName>
    <description>select to which car group(s) these cost applies
one car group shall not be used for several records for the same month</description>
    <inlineHelpText>select to which car group(s) these cost applies</inlineHelpText>
    <label>Car Groups</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Car_Group</valueSetName>
    </valueSet>
</CustomField>