force-app/main/default/objects/ServiceAndDamageCost__c/fields/Damage_Cost__c.field-meta.xml
<CustomField>
    <fullName>Damage_Cost__c</fullName>
    <description>damage cost per month</description>
    <inlineHelpText>damage cost per month</inlineHelpText>
    <label>Damage Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>