force-app/main/default/objects/ServiceAndDamageCost__c/fields/Period_Month__c.field-meta.xml
<CustomField>
    <fullName>Period_Month__c</fullName>
    <description>month number in the period</description>
    <inlineHelpText>month number in the period</inlineHelpText>
    <label>Period Month</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>