force-app/main/default/objects/ServiceAndDamageCost__c/fields/Service_and_Damage_Group__c.field-meta.xml
<CustomField>
    <fullName>Service_and_Damage_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service and Damage Group</label>
    <referenceTo>Service_and_Damage_Group__c</referenceTo>
    <relationshipLabel>Service and Damage Costs</relationshipLabel>
    <relationshipName>Service_and_Damage_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>