force-app/main/default/objects/ServiceAndDamageCost__c/fields/Tyres_Service_Cost__c.field-meta.xml
<CustomField>
    <fullName>Tyres_Service_Cost__c</fullName>
    <description>cost for tyres and service per month</description>
    <inlineHelpText>cost for tyres and service per month</inlineHelpText>
    <label>Tyres &amp; Service Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>