force-app/main/default/objects/ServiceAndDamageCost__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_and_Damage_Group__c</columns>
    <columns>Period_Month__c</columns>
    <columns>Damage_Cost__c</columns>
    <columns>Tyres_Service_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>